prevent layout shift

--- a/_sass/post-card.scss
+++ b/_sass/post-card.scss
@@ -7,7 +7,7 @@
     .image-container {
         border: 1px solid $white-4;
         border-radius: 10px;
-        flex: 1;
+        flex: 1 1 20em;
         aspect-ratio: 1 / 1;
         position: relative;
     }
@@ -16,9 +16,11 @@
         border-radius: 10px;
         position: absolute;
         top: 0;
-        right: 0;
-        bottom: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        box-sizing: border-box;
         object-fit: cover;
         margin-bottom: 0;
     }
@@ -28,11 +30,10 @@
     }
 
     .card-body {
-        flex: 1;
+        flex: 1 1 content;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        min-width: 50%;
         box-sizing: border-box;
 
         > div {
